# churnguard_app

./: README.md  app.py  config.py  data_loader.py  pyproject.toml
.github/workflows/: keep-alive.yml
.streamlit/: config.toml
pages/: 1_Dashboard.py  2_Analyse.py  2_Exploration.py  3_Modeles.py  4_Prediction.py
utils/: __init__.py  models.py  visualizations.py
