[project]
name = "churnguard"
version = "0.1.0"
description = ""
authors = [
    {name = "romaric",email = "hippolytetchoffo3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=1.4.0,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "polars (>=1.37.1,<2.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "streamlit (>=1.53.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
